if there is no "name" properly, don't assert(), pretend it is empty. now "ofctl" works on the shark.  fixes PR#36733.